<resources>
    <string name="app_name">BrainBoardMobile</string>

    <string name="enter_task_title">Enter task title</string>
    <string name="select_due_date_time">Select due date and time</string>
    <string name="use_voice_input">🎤 Use Voice Input</string>
    <string name="pick_date_time">📅 Pick Date &amp; Time</string>
    <string name="save_task">💾 Save Task</string>

    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="register_redirect">Don not have an account? Register</string>

    <string name="create_account">Create Account</string>

    <string name="add_task">Add Task</string>
    <string name="your_tasks">Your Tasks</string>
    <string name="logout">Logout</string>

    <string name="task_name">Task Name</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>