<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_small"
    android:background="@color/background_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/addTaskButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_task"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="@dimen/margin_large"/>

        <TextView
            android:id="@+id/uidTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:textStyle="italic"
            android:layout_marginBottom="@dimen/margin_small" />

        <TextView
            android:id="@+id/taskListTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_tasks"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/margin_small" />

        <androidx.wear.widget.WearableRecyclerView
            android:id="@+id/taskRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="vertical"
            android:clipToPadding="false" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</androidx.wear.widget.BoxInsetLayout>
